Fix weird nav sub-level alignment bug if no borders set

--- a/sass/navigation/_nav-desktop.scss
+++ b/sass/navigation/_nav-desktop.scss
@@ -32,11 +32,14 @@ $icon-arrow-left: '../svg/chevron-left-dark.svg';
         width: 12em;
         padding: 5px 0;
         background: #fff;
-        border-radius: 5px;
+
+        ul {
+          // Fix weird sub-level alignment bug if no borders set
+          transform: translateY(3px);
+        }
 
         a {
-          border: 0;
-          padding: 5px 15px;
+          padding: 8px 15px;
           font-size: 14px;
           color: $color-nav-dropdown-links;
 
